Implemented purchase and watch movie.